<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f0ffff"
    tools:context=".FragmentActivityu">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="93dp"
        android:layout_height="81dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/company_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/validation"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/logo_color" />

    <Button
        android:id="@+id/next"
        android:layout_width="350dp"
        android:layout_height="35dp"
        android:layout_marginStart="161dp"
        android:layout_marginLeft="161dp"
        android:layout_marginEnd="162dp"
        android:layout_marginRight="162dp"
        android:layout_marginBottom="59dp"
        android:background="@drawable/round_border_light"
        android:text="@string/next"
        android:textColor="#191919"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/validation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="92dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="8dp"
        android:text="@string/summary"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionMode.Title"
        android:textColor="#333"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/linearLayout2"
        android:layout_width="300dp"
        android:layout_height="400dp"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="108dp"
        android:orientation="vertical"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toTopOf="@+id/next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.64"
        tools:context=".Summary">

        <ListView
            android:id="@+id/mobile_list1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:cacheColorHint="#fff"
            android:divider="#787878"
            android:dividerHeight="2dp"
            android:textColor="#ffffff"
            tools:targetApi="p" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="300dp"
        android:layout_height="77dp"
        android:layout_marginStart="56dp"
        android:layout_marginLeft="56dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="55dp"
        android:layout_marginRight="55dp"
        android:layout_marginBottom="17dp"
        android:text="@string/tip2"
        android:textAlignment="center"
        android:textColor="#787878"
        android:textSize="18sp"
        app:fontFamily="sans-serif-thin"
        app:layout_constraintBottom_toTopOf="@+id/next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />


</androidx.constraintlayout.widget.ConstraintLayout>